--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -21,16 +21,22 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score\n",
     "from nltk.sentiment import SentimentIntensityAnalyzer\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Embedding, LSTM, Dense, Dropout, Bidirectional\n",
-    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense, Dropout, Bidirectional, Conv1D, MaxPooling1D, BatchNormalization\n",
+    "from tensorflow.keras.optimizers import Adam, RMSprop\n",
+    "from tensorflow.keras.callbacks import ReduceLROnPlateau\n",
     "\n",
     "# Load dataset\n",
     "df = pd.read_csv(\"news_scraping_results.csv\")\n",
+    "\n",
+    "# Cek jumlah data\n",
+    "print(f\"Jumlah data: {len(df)}\")\n",
+    "if len(df) < 10000:\n",
+    "    print(\"⚠️ Dataset masih kurang dari 10.000! Tambahkan lebih banyak data.\")\n",
     "\n",
     "# Data Cleaning\n",
     "df = df.dropna().reset_index(drop=True)\n",
@@ -61,12 +67,12 @@
     "# Splitting dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(df['clean_content'], df['sentiment'], test_size=0.2, random_state=42)\n",
     "\n",
-    "# TF-IDF Vectorization\n",
+    "# TF-IDF Vectorization (untuk SVM dan RF)\n",
     "tfidf = TfidfVectorizer(max_features=5000)\n",
     "X_train_tfidf = tfidf.fit_transform(X_train)\n",
     "X_test_tfidf = tfidf.transform(X_test)\n",
     "\n",
-    "# Model 1: Support Vector Machine with GridSearchCV\n",
+    "# Model 1: Support Vector Machine (SVM)\n",
     "svm_params = {'C': [0.1, 1, 10], 'kernel': ['linear', 'rbf']}\n",
     "svm_model = GridSearchCV(SVC(), svm_params, cv=5)\n",
     "svm_model.fit(X_train_tfidf, y_train)\n",
@@ -74,38 +80,66 @@
     "print(\"SVM Best Params:\", svm_model.best_params_)\n",
     "print(\"SVM Accuracy:\", accuracy_score(y_test, svm_preds))\n",
     "\n",
-    "# Model 2: Random Forest with Tuning\n",
-    "rf_model = RandomForestClassifier(n_estimators=200, max_depth=20, random_state=42)\n",
+    "# Model 2: Random Forest\n",
+    "rf_model = RandomForestClassifier(n_estimators=300, max_depth=30, random_state=42)\n",
     "rf_model.fit(X_train_tfidf, y_train)\n",
     "rf_preds = rf_model.predict(X_test_tfidf)\n",
     "print(\"Random Forest Accuracy:\", accuracy_score(y_test, rf_preds))\n",
     "\n",
     "# Model 3: Improved LSTM Deep Learning\n",
-    "max_words = 10000\n",
-    "max_len = 200\n",
+    "max_words = 15000  # Menambah jumlah kata unik\n",
+    "max_len = 250  # Memperpanjang panjang maksimum sequence\n",
     "\n",
     "tokenizer = Tokenizer(num_words=max_words)\n",
     "tokenizer.fit_on_texts(X_train)\n",
     "X_train_seq = pad_sequences(tokenizer.texts_to_sequences(X_train), maxlen=max_len)\n",
     "X_test_seq = pad_sequences(tokenizer.texts_to_sequences(X_test), maxlen=max_len)\n",
     "\n",
+    "# Model LSTM\n",
     "model = Sequential([\n",
-    "    Embedding(input_dim=max_words, output_dim=100, input_length=max_len),\n",
-    "    Bidirectional(LSTM(128, return_sequences=True)),\n",
-    "    LSTM(64),\n",
+    "    Embedding(input_dim=max_words, output_dim=128, input_length=max_len),\n",
+    "    Conv1D(128, kernel_size=5, activation='relu'),\n",
+    "    MaxPooling1D(pool_size=2),\n",
+    "    Bidirectional(LSTM(256, return_sequences=True)),  # Naikkan ke 256 unit\n",
+    "    BatchNormalization(),\n",
+    "    LSTM(128, return_sequences=False),  # Naikkan ke 128 unit\n",
     "    Dense(128, activation='relu'),\n",
-    "    Dropout(0.4),\n",
+    "    Dropout(0.5),  # Meningkatkan dropout untuk mengurangi overfitting\n",
     "    Dense(64, activation='relu'),\n",
-    "    Dropout(0.4),\n",
+    "    Dropout(0.5),\n",
     "    Dense(3, activation='softmax')\n",
     "])\n",
     "\n",
-    "model.compile(loss='sparse_categorical_crossentropy', optimizer=Adam(learning_rate=0.0005), metrics=['accuracy'])\n",
-    "model.fit(X_train_seq, y_train.factorize()[0], epochs=20, batch_size=32, validation_data=(X_test_seq, y_test.factorize()[0]))\n",
+    "# Learning Rate Scheduler\n",
+    "lr_scheduler = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=3, min_lr=0.00001)\n",
+    "\n",
+    "model.compile(loss='sparse_categorical_crossentropy', optimizer=RMSprop(learning_rate=0.001), metrics=['accuracy'])\n",
+    "\n",
+    "history = model.fit(X_train_seq, y_train.factorize()[0], epochs=40, batch_size=32, validation_data=(X_test_seq, y_test.factorize()[0]), callbacks=[lr_scheduler])\n",
     "\n",
     "# Evaluasi Model\n",
     "lstm_accuracy = model.evaluate(X_test_seq, y_test.factorize()[0], verbose=0)[1]\n",
-    "print(\"LSTM Accuracy:\", lstm_accuracy)\n"
+    "print(\"LSTM Accuracy:\", lstm_accuracy)\n",
+    "\n",
+    "# Plot Training & Validation Accuracy\n",
+    "plt.figure(figsize=(12, 5))\n",
+    "plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
+    "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+    "plt.title('Training & Validation Accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot Training & Validation Loss\n",
+    "plt.figure(figsize=(12, 5))\n",
+    "plt.plot(history.history['loss'], label='Train Loss')\n",
+    "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+    "plt.title('Training & Validation Loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
    ]
   }
  ],
