--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,6 +9,7 @@
    },
    "outputs": [],
    "source": [
+    "# 📌 Import Library\n",
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -21,7 +22,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "from nltk.sentiment import SentimentIntensityAnalyzer\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
@@ -30,15 +31,15 @@
     "from tensorflow.keras.optimizers import Adam, RMSprop\n",
     "from tensorflow.keras.callbacks import ReduceLROnPlateau\n",
     "\n",
-    "# Load dataset\n",
+    "# 📌 Load Dataset\n",
     "df = pd.read_csv(\"news_scraping_results.csv\")\n",
     "\n",
-    "# Cek jumlah data\n",
+    "# ✅ Cek jumlah data\n",
     "print(f\"Jumlah data: {len(df)}\")\n",
     "if len(df) < 10000:\n",
     "    print(\"⚠️ Dataset masih kurang dari 10.000! Tambahkan lebih banyak data.\")\n",
     "\n",
-    "# Data Cleaning\n",
+    "# 📌 Data Cleaning\n",
     "df = df.dropna().reset_index(drop=True)\n",
     "\n",
     "def clean_text(text):\n",
@@ -49,7 +50,7 @@
     "\n",
     "df['clean_content'] = df['content'].apply(clean_text)\n",
     "\n",
-    "# Sentiment Labeling\n",
+    "# 📌 Sentiment Labeling\n",
     "nltk.download('vader_lexicon')\n",
     "sia = SentimentIntensityAnalyzer()\n",
     "\n",
@@ -64,81 +65,103 @@
     "\n",
     "df['sentiment'] = df['clean_content'].apply(get_sentiment)\n",
     "\n",
-    "# Splitting dataset\n",
+    "# 📌 Splitting dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(df['clean_content'], df['sentiment'], test_size=0.2, random_state=42)\n",
     "\n",
-    "# TF-IDF Vectorization (untuk SVM dan RF)\n",
+    "# ✅ TF-IDF Vectorization untuk SVM dan RF\n",
     "tfidf = TfidfVectorizer(max_features=5000)\n",
     "X_train_tfidf = tfidf.fit_transform(X_train)\n",
     "X_test_tfidf = tfidf.transform(X_test)\n",
     "\n",
-    "# Model 1: Support Vector Machine (SVM)\n",
+    "# ✅ Model 1: Support Vector Machine (SVM)\n",
     "svm_params = {'C': [0.1, 1, 10], 'kernel': ['linear', 'rbf']}\n",
     "svm_model = GridSearchCV(SVC(), svm_params, cv=5)\n",
     "svm_model.fit(X_train_tfidf, y_train)\n",
     "svm_preds = svm_model.predict(X_test_tfidf)\n",
-    "print(\"SVM Best Params:\", svm_model.best_params_)\n",
-    "print(\"SVM Accuracy:\", accuracy_score(y_test, svm_preds))\n",
+    "svm_acc = accuracy_score(y_test, svm_preds)\n",
+    "print(\"✅ SVM Best Params:\", svm_model.best_params_)\n",
+    "print(\"✅ SVM Accuracy:\", f\"{svm_acc:.2%}\")\n",
     "\n",
-    "# Model 2: Random Forest\n",
+    "# ✅ Model 2: Random Forest\n",
     "rf_model = RandomForestClassifier(n_estimators=300, max_depth=30, random_state=42)\n",
     "rf_model.fit(X_train_tfidf, y_train)\n",
     "rf_preds = rf_model.predict(X_test_tfidf)\n",
-    "print(\"Random Forest Accuracy:\", accuracy_score(y_test, rf_preds))\n",
+    "rf_acc = accuracy_score(y_test, rf_preds)\n",
+    "print(\"✅ Random Forest Accuracy:\", f\"{rf_acc:.2%}\")\n",
     "\n",
-    "# Model 3: Improved LSTM Deep Learning\n",
-    "max_words = 15000  # Menambah jumlah kata unik\n",
-    "max_len = 250  # Memperpanjang panjang maksimum sequence\n",
+    "# ✅ Model 3: Optimized LSTM\n",
+    "max_words = 15000  # Tambah jumlah kata unik\n",
+    "max_len = 250  # Panjang sequence\n",
     "\n",
     "tokenizer = Tokenizer(num_words=max_words)\n",
     "tokenizer.fit_on_texts(X_train)\n",
     "X_train_seq = pad_sequences(tokenizer.texts_to_sequences(X_train), maxlen=max_len)\n",
     "X_test_seq = pad_sequences(tokenizer.texts_to_sequences(X_test), maxlen=max_len)\n",
     "\n",
-    "# Model LSTM\n",
+    "# 🔹 LSTM Model dengan Hyperparameter Tuning\n",
     "model = Sequential([\n",
     "    Embedding(input_dim=max_words, output_dim=128, input_length=max_len),\n",
     "    Conv1D(128, kernel_size=5, activation='relu'),\n",
     "    MaxPooling1D(pool_size=2),\n",
-    "    Bidirectional(LSTM(256, return_sequences=True)),  # Naikkan ke 256 unit\n",
+    "    Bidirectional(LSTM(256, return_sequences=True)),\n",
     "    BatchNormalization(),\n",
-    "    LSTM(128, return_sequences=False),  # Naikkan ke 128 unit\n",
+    "    LSTM(128),\n",
     "    Dense(128, activation='relu'),\n",
-    "    Dropout(0.5),  # Meningkatkan dropout untuk mengurangi overfitting\n",
+    "    Dropout(0.5),\n",
     "    Dense(64, activation='relu'),\n",
     "    Dropout(0.5),\n",
     "    Dense(3, activation='softmax')\n",
     "])\n",
     "\n",
-    "# Learning Rate Scheduler\n",
+    "# 🔹 Learning Rate Scheduler\n",
     "lr_scheduler = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=3, min_lr=0.00001)\n",
     "\n",
-    "model.compile(loss='sparse_categorical_crossentropy', optimizer=RMSprop(learning_rate=0.001), metrics=['accuracy'])\n",
+    "model.compile(loss='sparse_categorical_crossentropy', optimizer=Adam(learning_rate=0.0001), metrics=['accuracy'])\n",
     "\n",
-    "history = model.fit(X_train_seq, y_train.factorize()[0], epochs=40, batch_size=32, validation_data=(X_test_seq, y_test.factorize()[0]), callbacks=[lr_scheduler])\n",
+    "# 🔹 Training Model LSTM\n",
+    "history = model.fit(X_train_seq, y_train.factorize()[0], epochs=50, batch_size=64, validation_data=(X_test_seq, y_test.factorize()[0]), callbacks=[lr_scheduler])\n",
     "\n",
-    "# Evaluasi Model\n",
+    "# 🔹 Evaluasi Model\n",
     "lstm_accuracy = model.evaluate(X_test_seq, y_test.factorize()[0], verbose=0)[1]\n",
-    "print(\"LSTM Accuracy:\", lstm_accuracy)\n",
+    "print(\"✅ LSTM Accuracy setelah tuning:\", f\"{lstm_accuracy:.2%}\")\n",
     "\n",
-    "# Plot Training & Validation Accuracy\n",
+    "# 🔹 Menampilkan Hasil Evaluasi\n",
+    "print(\"\\n🔹 Evaluasi Model:\")\n",
+    "print(f\"SVM Accuracy: {svm_acc:.2%}\")\n",
+    "print(f\"Random Forest Accuracy: {rf_acc:.2%}\")\n",
+    "print(f\"LSTM Accuracy: {lstm_accuracy:.2%}\")\n",
+    "\n",
+    "# 🔹 Contoh Prediksi Model LSTM\n",
+    "print(\"\\n🔹 Contoh Prediksi:\")\n",
+    "sample_texts = X_test[:5].tolist()\n",
+    "sample_labels = y_test[:5].tolist()\n",
+    "sample_preds = model.predict(pad_sequences(tokenizer.texts_to_sequences(sample_texts), maxlen=max_len))\n",
+    "\n",
+    "for i, text in enumerate(sample_texts):\n",
+    "    print(f\"Kalimat: {text}\")\n",
+    "    print(f\"Label Asli: {sample_labels[i]}\")\n",
+    "    print(f\"Prediksi Model: {['negative', 'neutral', 'positive'][np.argmax(sample_preds[i])]}\\n\")\n",
+    "\n",
+    "# 🔹 Visualisasi Akurasi Model\n",
     "plt.figure(figsize=(12, 5))\n",
-    "plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
-    "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
+    "plt.plot(history.history['accuracy'], label='Train Accuracy', marker='o')\n",
+    "plt.plot(history.history['val_accuracy'], label='Validation Accuracy', marker='o')\n",
     "plt.title('Training & Validation Accuracy')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.legend()\n",
+    "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# Plot Training & Validation Loss\n",
+    "# 🔹 Visualisasi Loss Model\n",
     "plt.figure(figsize=(12, 5))\n",
-    "plt.plot(history.history['loss'], label='Train Loss')\n",
-    "plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+    "plt.plot(history.history['loss'], label='Train Loss', marker='o')\n",
+    "plt.plot(history.history['val_loss'], label='Validation Loss', marker='o')\n",
     "plt.title('Training & Validation Loss')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Loss')\n",
     "plt.legend()\n",
+    "plt.grid(True)\n",
     "plt.show()\n"
    ]
   }
